--- a/style.css
+++ b/style.css
@@ -9,3 +9,36 @@ body{
 .heading{
     font-style: italic;
 }
+
+#social-icons{
+    display: flex;
+    justify-content: center;
+    margin: auto;
+    margin-top: 30px;
+}
+#social-icons a {
+    margin: 5px;
+}
+#social-icons a img{
+    color: black;
+    padding: 1rem;
+    height: auto;
+    width: auto;
+    background-color: white;
+    
+    font-size: 1.5rem;
+    border-radius: 50%;
+    background-color: white;
+    text-align: center;
+    
+}
+
+#social-icons a img:hover{
+    /* color: white; */
+    box-shadow: 0px 0px 5px 2px rgba(243, 241, 236, 0.9);
+}
+
+img{
+    width: auto;
+    height: auto;
+}
